<resources>
    <string name="app_name">MoviTop</string>
    <!--  API  -->
    <string name="variable_poster_url">https://image.tmdb.org/t/p/w342</string>

    <!--  CUSTOMS  -->
    <string name="txt_btn_subscribe">Subscribe</string>
    <string name="txt_btn_subscribed">Subscribed</string>
    <string name="txt_genre_notavailable">Not available</string>
    <string name="txt_nomoremoviesavailables">No more movies available</string>
    <string name="txt_main_fragment_nowplayingmovies_list_title">Now playing:</string>
    <string name="txt_upcomingmovies_title">Upcoming…</string>
    <string name="txt_btn_searched_movie_adapter_added">Added</string>
    <string name="txt_btn_searched_movie_adapter_add">Add</string>
    <string name="txt_menu_bottom_bar_popular">POPULAR</string>
    <string name="txt_menu_bottom_bar_home">HOME</string>
    <string name="txt_menu_bottom_bar_profile">PROFILE</string>
    <string name="txt_userprofile_fav_movies_count_title">Subscribed Movies</string>
    <string name="txt_userprofile_fav_people_count_title">Subscribed People</string>
    <string name="txt_userprofile_fav_series_count_title">Subscribed Series</string>
    <string name="txt_movie_details_nocastavailable">No crew available for this movie</string>
    <string name="txt_movie_details_cast_title">Top cast:</string>
    <string name="txt_activity_about_us_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="txt_activity_about_us_attribution_title">Attributions:</string>
    <string name="txt_activity_about_us_app_version">Version: 1.0.1</string>
    <string name="btn_activity_about_us_contact_me">Contact me</string>
    <string name="txt_activity_about_us_job_title">Android Developer</string>
    <string name="txt_activity_about_us_name">Sebastian Aranda</string>
    <string name="contentDescription_tmdb_api_logo">The Movie Database API logo</string>
    <string name="contentDescription_MoviePoster">Movie poster</string>
    <string name="contentDescription_ActorImage">Actor profile image</string>
    <string name="txt_search_movie_row_materialbuttom_add">Add</string>

    <string name="txt_login_layout_error_empty_email">You must enter an email</string>
    <string name="txt_login_edit_text_error_empty_email">Please enter an email</string>
    <string name="txt_login_layout_error_wrong_email">The email is not valid</string>
    <string name="txt_login_layout_error_empty_name">You must enter an name</string>
    <string name="txt_login_edit_text_error_empty_name">Please enter a name</string>
    <string name="txt_login_layout_error_wrong_name">The name is not valid</string>
    <string name="txt_login_layout_error_empty_password">You must enter an password</string>
    <string name="txt_login_edit_text_error_empty_password">Please enter an password</string>
    <string name="txt_login_layout_error_wrong_password">The password is not valid</string>

    <string name="txt_activity_cast_movies_title">Known For</string>
    <string name="txt_castactivity_birthday_noavailable">Birthday not available</string>
    <string name="txt_castactivity_location_noavailable">N/A</string>
    <string name="txt_castactivity_biography_noavailable">Biography not available in the selected language.</string>
    <string name="txt_current_popular_movies_title">Current popular movies</string>
    <string name="txt_login_required_error">You must be logged in.</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="activity_login_title_email">Email</string>
    <string name="activity_login_title_password">Password</string>
    <string name="activity_register_title_name">Name</string>
    <string name="activity_login_btn_login">Login</string>
    <string name="activity_login_btn_register">Sign up</string>
    <string name="activity_login_btn_aboutus">About us…</string>
    <string name="activity_register_btn_finish">Finish</string>
    <string name="txt_error">¡Sorry! - An error has occurred</string>

    <string name="txt_moviedetailsactivity_overview_noavailable">Overview not available in the selected language.</string>
</resources>
