<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_register_guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <TextView
        android:id="@+id/activity_register_txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/activity_register_title_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/activity_register_text_input_layout_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_text_input_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="14dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/activity_register_guideline_mid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_text_input_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_register_material_button_complete"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        android:text="@string/activity_register_btn_finish"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="@id/activity_register_text_input_layout_name"
        app:layout_constraintTop_toBottomOf="@id/activity_register_text_input_layout_name"
        app:layout_constraintRight_toRightOf="@id/activity_register_text_input_layout_name"
        app:rippleColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>